--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>DavidMarriesKate.com</title>
   </head>
   <body>
-    <h1>It's happening!</h1>
-    <img src="its-happening.gif" alt="It's Happening!">
+    <div style="text-align:center;">
+      <h1>It's happening!</h1>
+      <img src="its-happening.gif" alt="It's Happening!">
+    </div>
   </body>
 </html>
