--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="col-12 py-3 ivory text-center">
         <img class="img-fluid mb-3" src="img/save-the-date.jpg" alt="Save the date!">
         <a class="btn btn-secondary mb-2" href="files/save-the-date.pdf">Download PDF</a>
-        <p><strong>Questions?</strong> Email <a href="mailto:wtf@DavidMarriesKate.com">hi@DavidMarriesKate.com</a></p>
+        <p><strong>Questions?</strong> Email <a href="mailto:wtf@DavidMarriesKate.com">finally@DavidMarriesKate.com</a></p>
       </div>
     </div>
   </div>
