Shrink max column width on desktops

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center">
-      <div class="col-12 py-3 ivory text-center">
+      <div class="col-lg-8 py-3 ivory text-center">
         <img class="img-fluid mb-3" src="img/save-the-date.jpg" alt="Save the date!">
         <a class="btn btn-secondary mb-2" href="files/save-the-date.pdf">Download PDF</a>
         <p><strong>Questions?</strong> Email <a href="mailto:wtf@DavidMarriesKate.com">finally@DavidMarriesKate.com</a></p>
