New domain, chivalry++

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>It's Happening! ~ David Marries Kate</title>
+  <title>It's Happening! ~ Kate Marries David</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <style>
     html, body {
@@ -23,7 +23,7 @@
       <div class="col-lg-8 py-3 ivory text-center">
         <img class="img-fluid mb-3" src="img/save-the-date.jpg" alt="Save the date!">
         <a class="btn btn-secondary mb-2" href="files/save-the-date.pdf">Download PDF</a>
-        <p><strong>Questions?</strong> Email <a href="mailto:wtf@DavidMarriesKate.com">finally@DavidMarriesKate.com</a></p>
+        <p><strong>Questions?</strong> Email <a href="mailto:wtf@KateMarriesDavid.com">finally@KateMarriesDavid.com</a></p>
       </div>
     </div>
   </div>
