Fix padding at top

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     body {
       position: relative;
-      padding-top: 58px;
+      padding-top: 3rem;
     }
     .row.collapse.show {
       display: flex;
