Minor tidy, switch button to link for cursor

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
         <div class="row intro align-items-end">
           <div class="col-md-6 p-3 mx-auto mb-5 text-center ivory--overlay rounded">
             <h1 class="display-1 title">Kate <img src="img/heart-sketch.svg" alt="and" title="and" style="height: .75em;"><span class="sr-only">and</span> David</h1>
-            <p class="lead mb-0">are getting married (finally!)</p>
-            <p class="key-fact mb-0">12 August 2017</p>
-            <p class="mb-0">Townsville, Queensland, Australia</p>
+            <p class="lead mb-2">are getting married (finally!)</p>
+            <p class="key-fact mb-2">12 August 2017</p>
+            <p class="lead mb-0">Townsville <img src="img/flourish-left.svg" alt="Divider"> Queensland <img src="img/flourish-right.svg" alt="Divider"> Australia</p>
           </div>
         </div>
       </div>
@@ -402,9 +402,9 @@
         </div>
         <div class="row mb-5">
           <div class="col">
-            <button class="more-info collapsed btn btn-primary" type="button" data-toggle="collapse" data-target="#saturday" aria-expanded="false" aria-controls="saturday">
-              More info
-            </button>
+            <a class="more-info collapsed btn btn-primary" href="#saturday" data-toggle="collapse" aria-expanded="false" aria-controls="saturday">
+              more info
+            </a>
           </div>
         </div>
         <div class="row mb-5">
