--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           </div>
         </div>
         <p class="text-justify">
-          Their shared loves include technology, mexican food, the number 42,  dark sarcasm, Jack Bauer, badgers, rum and shrubberies. They hate streetlights, litterbugs, modern music, Vogon poetry, <a href="https://stackoverflow.com/questions/1732348/regex-match-open-tags-except-xhtml-self-contained-tags/1732454#1732454">parsing HTML with regex</a>, undercooked chicken, poor grammar, and unfinished
+          Their shared loves include technology, Mexican food, the number 42, dark sarcasm, Jack Bauer, badgers, rum and shrubberies. They jointly detest streetlights, litterbugs, modern music, Vogon poetry, <a href="https://stackoverflow.com/questions/1732348/regex-match-open-tags-except-xhtml-self-contained-tags/1732454#1732454">parsing HTML with regex</a>, undercooked chicken, poor Grammar, and unfinished
         </p>
         <p class="text-justify">
           Kate and David’s journey culminates (peaks?) on 12 August 2017, when they will start an even bigger and more exciting chapter together.
@@ -284,7 +284,7 @@
             <em>Bridesmaid</em>
           </div>
           <div class="col-lg-8">
-            Better known as Marnie, she’s the non-identical twin Kate never had. Their friendship started at Pimlico High in year 10 after she relocated to Townsville, and continued through their senior years and university studies. They lived together in the final year of their respective degrees at the now-legendary “Nuthouse” (along with David and James),  and though Marnie now lives in Tassie, the miles and oceans between them can’t seem to curb the silliness.
+            Better known as Marnie, she’s the non-identical twin Kate never had. Their friendship started at Pimlico High in year 10 after she relocated to Townsville, and continued through their senior years and university studies. They lived together in the final year of their respective degrees at the now-legendary “Nuthouse” (along with David and James). Though Marnie now lives in Tassie, the miles and oceans between them can’t seem to curb the silliness.
           </div>
         </div>
         <div class="row">
@@ -431,7 +431,7 @@
         <div class="text-center">
           <h2 id="registry">Gifts and Registry</h2>
           <p class="lead">
-            After 10 years togther we've amassed so many things already;  we propose this poem to help explain.
+            After 10 years together we've amassed so many things already;  we propose this poem to help explain.
           </p>
           <p><img src="img/birthday-giftbox-sketch.svg" alt="Gift" width="50"></p>
         </div>
