Better redirects and rooms by rick has a new URL

--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#questions">Questions?</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link page-scroll" href="#rsvp">RSVP</a>
+              </li>
             </ul>
-            <span class="form-inline justify-content-center">
-              <a class="nav-link btn btn-primary" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdCiLPYdMTc4KAj5w7hfsfqwu4Uj2TWK9sEfVmlhYUeHcsU8g/viewform?embedded=true#response=ACYDBNjIQTE1mKDN6T63IFCql2S8SEHmlpOFOYVqCMXosMTs2mqbkWAA3saePQ">RSVP Now</a>
-            </span>
           </div>
         </div>
       </nav>
@@ -564,7 +564,7 @@ And, in fact, quite <em>stupendous</em>.</pre>
           <div class="col-6"><a class="logo" target="_blank" href="http://the-ville.com.au/"><img class="img-fluid logo" src="./img/the-ville-logo.png" title="The Ville Resort"></a></div>
           <div class="col-6"><a class="logo" target="_blank" href="http://www.grandchancellorhotels.com/Hotel-Grand-Chancellor-Townsville"><img class="img-fluid logo" src="./img/hotel-grand-chancellor-logo.png" title="Hotel Grand Chancellor Townsville"></a></div>
           <div class="col-6"><a class="logo" target="_blank" href="http://www.rambutantownsville.com.au/"><img class="img-fluid logo" src="./img/rambutan-logo.png" title="Rambutan Resort"></a></div>
-          <div class="col-6"><a class="logo" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="img-fluid logo" width="150" src="./img/rooms-by-rick.svg" title="Rooms by Rick"></a></div>
+          <div class="col-6"><a class="logo" target="_blank" href="/rooms-by-rick"><img class="img-fluid logo" width="150" src="./img/rooms-by-rick.svg" title="Rooms by Rick"></a></div>
         </div>
       </div>
     </div>
@@ -606,6 +606,25 @@ And, in fact, quite <em>stupendous</em>.</pre>
         <p>We hope you're as excited as we are!<br>
           <a href="save-the-date.html">Still trying to Save the Date?</a>
         </p>
+      </div>
+    </div>
+
+    <div class="row my-5">
+      <div class="col text-center">
+        <img src="img/swirl.svg" alt="Divider">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6 mx-auto text-center">
+        <h2 id="rsvp">RSVP</h2>
+        <p class="lead">
+          Let us know whether or not you can make it by 1 June 2017.
+        </p>
+        <p class="lead my-4">
+          <a class="btn btn-primary" target="_blank" href="/rsvp">Respond now online</a>
+        </p>
+        <p>Did you know that <em>RSVP</em> stands for <em>répondez s’il vous plaît</em>?
       </div>
     </div>
 
