--- a/index.html
+++ b/index.html
@@ -577,10 +577,10 @@ And, in fact, quite <em>stupendous</em>.</pre>
         </div>
         <ul>
           <li><b>Where:</b> North Queensland, Australia. Think topics, the Great Barrier Reef, rainforest and islands.</li>
-          <li><b>Getting here:</b> Come via a capital city or Cairns. Flights appear on special to/from the USA right now. In general, try <a href="https://qantas.com.au">Qantas</a>, <a href="http://iwantthatflight.com.au/">I Want That Flight</a> &amp; <a href="https://ozbargain.com.au/">OZBargain</a>.</li>
+          <li><b>Getting here:</b> Come via a capital city or Cairns. Flights appear on special to/from the USA right now. In general, try <a href="https://qantas.com.au">Qantas</a>, <a href="http://iwantthatflight.com.au/">I Want That Flight</a> &amp; <a href="https://ozbargain.com.au/">OzBargain</a>.</li>
           <li><b>Transport:</b> hire cars, no Uber (yet), public transport can be a bit limited. Try ride-sharing with others guests.</li>
           <li><b>Weather:</b> temperate and dry in August, only bring a light jacket unless you get cold easily</li>
-          <li><b>Things to do:</b> <a href="https://en.wikipedia.org/wiki/Magnetic_Island">Magnetic Island</a>, <a href="https://www.npsr.qld.gov.au/parks/paluma-range/">Paluma</a>, <a href="https://en.wikipedia.org/wiki/Castle_Hill,_Townsville">Castle Hill</a>, take a reef trip, <a href="http://www.frostymango.com.au/">Frosty Mango</a>, <a href="http://www.paronellapark.com.au">Paronella Park</a>, <a href="http://www.cairns.qld.gov.au">Cairns</a>, so <a href="https://www.townsville.qld.gov.au/__data/assets/pdf_file/0023/5882/Accessing-Townsville-Guide-15-16_lo-res-web-version.pdf">lots more</a></li>
+          <li><b>Things to do:</b> <a href="https://en.wikipedia.org/wiki/Magnetic_Island">Magnetic Island</a>, <a href="https://www.npsr.qld.gov.au/parks/paluma-range/">Paluma</a>, <a href="https://en.wikipedia.org/wiki/Castle_Hill,_Townsville">Castle Hill</a>, take a reef trip, <a href="http://www.frostymango.com.au/">Frosty Mango</a>, <a href="http://www.paronellapark.com.au">Paronella Park</a>, <a href="http://www.cairns.qld.gov.au">Cairns</a>, and <a href="https://www.townsville.qld.gov.au/__data/assets/pdf_file/0023/5882/Accessing-Townsville-Guide-15-16_lo-res-web-version.pdf">lots more</a></li>
           <li><b>Wildlife:</b> it's everywhere. Not kangaroos running amok in the street, but wallabies live near us and we saw a crocodile in the river last week. We have kookaburras too and about a million fruit bats.</li>
         </ul>
       </div>
