--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ And, in fact, quite <em>stupendous</em>.</pre>
         <p class="lead">
           If you’d like to ask us about anything – times, locations, food,
           accessibility, facilities, parking, other ideas about what to do in
-          Townsville or deals on flights – ask away at:
+          Townsville or deals on flights – say hi by emailing:
         </p>
         <p class="lead my-4">
           <a class="btn btn-primary" href="mailto:wtf@KateMarriesDavid.com">finally@KateMarriesDavid.com</a>
