--- a/index.html
+++ b/index.html
@@ -180,14 +180,13 @@
     <!-- Easter eggs: dharma, 42, don't panic etc. Badger Rick Roll -->
     <!-- Content from invitations, save the date, Google tasks, Trello etc -->
     <div id="navbar-wrapper">
-      <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top text-center bg-inverse" id="navbar">
+      <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse" id="navbar">
         <div class="container">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- Workaround https://github.com/twbs/bootstrap/issues/21846 -->
-          <span class="navbar-text">&nbsp;</span>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
+          <span class="navbar-brand hidden-lg-up">Kate &amp; David's Wedding</span>
+          <div class="collapse navbar-collapse justify-content-center text-center mt-3 mt-lg-0" id="navbarContent">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#top">Home</a>
@@ -370,21 +369,21 @@
             <p>Ceremony Rehearsal + <br>Rehearsal Dinner<br>
             <span class="badge badge-navy">Wedding party only</span>
             </p>
-            <p class="px-5 text-justify">Held at Kissing Point the afternoon before the wedding; rehearsal dinner to follow at a nearby location to be determined.</p>
+            <p class="px-lg-5 text-justify">Held at Kissing Point the afternoon before the wedding; rehearsal dinner to follow at a nearby location to be determined.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12 mb-4">
             <p class="key-fact">Saturday 12 August</p>
           </div>
-          <div class="col-6">
+          <div class="col">
             <p>
               <span class="time">Three PM Sharp<br>Ceremony</span><br>
               <strong>Kissing Point, Fort Lawn</strong><br>
               <img class="img-fluid" src="./img/gallery-4.jpg" title="Kissing Point, looking towards Castle Hill" width="200">
             </p>
           </div>
-          <div class="col-6">
+          <div class="col">
             <p>
               <span class="time">Six PM Sharp<br>Reception</span>
             </p>
@@ -396,7 +395,7 @@
           </div>
         </div>
         <div class="row collapse" id="saturday">
-          <div class="col px-5 text-justify">
+          <div class="col px-lg-5 text-justify">
             <p>
               The ceremony is at Kissing Point, at northern-most end of Townsville’s Strand. Details on the Fort Lawn’s location within the <em>Jezzine Barracks</em> precinct, bathroom facilities, and car parking areas can be found in our <a class="page-scroll" href="#map">Maps section</a>.
             </p>
@@ -404,7 +403,7 @@
               A short, uphill walk on a sealed path is required to reach this location, so anyone with accessibility issues may require additional assistance. Ceremony guests will be required to stand for the event, but we will have some chairs available for those who need them.  Let us know when RSVPing.
             </div>
           </div>
-          <div class="col px-5 text-justify">
+          <div class="col px-lg-5 text-justify">
             <p>
              The reception will be held at the ReefHQ Great Barrier Reef Aquarium, the largest living coral reef aquarium in the world.  ReefHQ is located at the southern-most end of Townsville’s Strand and venue location and parking arrangements can be viewed in our <a class="page-scroll" href="#map">Maps section</a>.
             </p>
