Add new uMap layer for things to do

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ And, in fact, quite <em>stupendous</em>.</pre>
         </div>
         <div class="form-check form-check-inline">
           <label class="form-check-label">
-            <input class="form-check-input map-layer" type="checkbox" name="map-layers" value="321919" checked>
+            <input class="form-check-input map-layer" type="checkbox" name="map-layers" value="321919">
             <span class="icon_container" style="background-color: Yellow;"><img class="" src="https://umap.openstreetmap.fr/uploads/pictogram/lodging-24.png"></span>
             Accommodation
           </label>
@@ -543,15 +543,22 @@ And, in fact, quite <em>stupendous</em>.</pre>
         </div>
         <div class="form-check form-check-inline">
           <label class="form-check-label">
-            <input class="form-check-input map-layer" type="checkbox" name="map-layers" value="321915">
+            <input class="form-check-input map-layer" type="checkbox" name="map-layers" value="321915" checked>
             <span class="icon_container" style="background-color: DarkGreen;"><img class="" src="https://umap.openstreetmap.fr/uploads/pictogram/park-24_1.png"></span>
-            Things to do
+            Things to do between ceremony &amp; reception
+          </label>
+        </div>
+        <div class="form-check form-check-inline">
+          <label class="form-check-label">
+            <input class="form-check-input map-layer" type="checkbox" name="map-layers" value="327832">
+            <span class="icon_container" style="background-color: Indigo;"><img class="" src="https://umap.openstreetmap.fr/uploads/pictogram/swimming-24-white.png"></span>
+            Townsville attractions
           </label>
         </div>
       </div>
       <div class="col-12 px-0">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" id="event-map" src="https://umap.openstreetmap.fr/en/map/kate-and-davids-wedding_130973?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&datalayers=321907%2C321919#13/-19.2278/146.7913" allowfullscreen>Loading...</iframe>
+          <iframe class="embed-responsive-item" id="event-map" src="https://umap.openstreetmap.fr/en/map/kate-and-davids-wedding_130973?scaleControl=false&miniMap=true&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&datalayers=321907%2C321915#13/-19.2278/146.7913" allowfullscreen>Loading...</iframe>
         </div>
       </div>
     </div>
