--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ And, in fact, quite <em>stupendous</em>.</pre>
         <h2 id="key-info">Key info</h2>
         <h3 class="mb-5" id="map">Directions &amp; Maps</h3>
         <p>
-          <a class="btn btn-primary" href="./files/Kissing_Point_Map.pdf">Kissing Point Map (3MB PDF)</a>
+          <a class="btn btn-primary" href="./files/Kissing_Point_Map.pdf">Ceremony Access Map (3MB PDF)</a>
         </p>
       </div>
     </div>
