--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ And, in fact, quite <em>stupendous</em>.</pre>
   <div class="container text-center text-muted my-5">
     <p>
       <img class="invert mr-3" src="img/flourish-left.svg" alt="Tada">
-      <a class="text-muted" href="https://www.youtube.com/watch?v=jofNR_WkoCE" target="_blank">What <em>does</em> the fox say?</a>
+      <a class="text-muted" href="/foxsay" target="_blank">What <em>does</em> the fox say?</a>
       <img class="invert ml-3" src="img/flourish-right.svg" alt="Tada">
     </p>
   </div>
