--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ And, in fact, quite <em>stupendous</em>.</pre>
           <p class="lead">Townsville, North Queensland in 60 seconds</p>
         </div>
         <ul>
-          <li><b>Where:</b> North Queensland, Australia. Think topics, the Great Barrier Reef, rainforest and islands.</li>
+          <li><b>Where:</b> North Queensland, Australia. Think tropics, the Great Barrier Reef, rainforest and islands.</li>
           <li><b>Getting here:</b> Come via a capital city or Cairns. Flights appear on special to/from the USA right now. In general, try <a href="https://qantas.com.au">Qantas</a>, <a href="http://iwantthatflight.com.au/">I Want That Flight</a> &amp; <a href="https://ozbargain.com.au/">OzBargain</a>.</li>
           <li><b>Transport:</b> hire cars, no Uber (yet), public transport can be a bit limited. Try ride-sharing with others guests.</li>
           <li><b>Weather:</b> temperate and dry in August, only bring a light jacket unless you get cold easily.</li>
