--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </div>
         <div class="row mb-5">
           <div class="col px-lg-5">
-            <div class="alert alert-info">
+            <div class="alert alert-info" role="alert">
               Wondering what to wear?  So are we, so <a class="alert-link" href="https://en.wikipedia.org/wiki/Phrases_from_The_Hitchhiker%27s_Guide_to_the_Galaxy#Don.27t_Panic">Don't Panic</a>.  We're calling it <em>semi-formal attire</em>, so there's no need for a tuxedo, but equally upgrade your thongs (that's Aussie for <a href="https://en.wikipedia.org/wiki/Flip-flops"><em>flip-flops</em></a>).
             </div>
           </div>
