--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           </div>
         </div>
         <p class="text-justify">
-          Their shared loves include technology, Mexican food, the number 42, dark sarcasm, Jack Bauer, badgers, rum and shrubberies. They jointly detest streetlights, litterbugs, modern music, Vogon poetry, <a href="https://stackoverflow.com/questions/1732348/regex-match-open-tags-except-xhtml-self-contained-tags/1732454#1732454">parsing HTML with regex</a>, undercooked chicken, poor Grammar, and unfinished
+          Their shared loves include technology, Mexican food, the number 42, dark sarcasm, Savage Garden, Jack Bauer, badgers, rum and shrubberies. They jointly detest streetlights, litterbugs, modern music, Vogon poetry, <a href="https://stackoverflow.com/questions/1732348/regex-match-open-tags-except-xhtml-self-contained-tags/1732454#1732454">parsing HTML with regex</a>, undercooked chicken, poor Grammar, and unfinished
         </p>
         <p class="text-justify">
           Kate and David’s journey culminates (peaks?) on 12 August 2017, when they will start an even bigger and more exciting chapter together.
