Update people's roles

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="row mb-5">
           <div class="col-lg-4 text-center">
             <h3 class="key-fact">Miradija</h3>
-            <em>Bridesmaid</em>
+            <em>Bridescompanion</em>
           </div>
           <div class="col-lg-8">
             Better known as Marnie, she’s the non-identical twin Kate never had. Their friendship started at Pimlico High in year 10 after she relocated to Townsville, and continued through their senior years and university studies. They lived together in the final year of their respective degrees at the now-legendary “Nuthouse” (along with David and James). Though Marnie now lives in Tassie, the miles and oceans between them can’t seem to curb the silliness.
@@ -302,7 +302,7 @@
         <div class="row">
           <div class="col-lg-4 text-center">
             <h3 class="key-fact">Giovanni</h3>
-            <em>Bridesman</em>
+            <em>Bridescompanion</em>
           </div>
           <div class="col-lg-8">
             Giovanni and Kate have been friends since their early days of reading newspapers for fun in year 8 at Pimlico High. They’ve debated against the best and won, held countless election parties, enjoyed many different BBC productions, and shared extremely cold international holidays together. Despite Giovanni now living in Sydney, their long-distance quest for world domination continues.
@@ -317,7 +317,7 @@
         <div class="row mb-5">
           <div class="col-lg-4 text-center">
             <h3 class="key-fact">James</h3>
-            <em>Groomsman</em>
+            <em>Best Man</em>
           </div>
           <div class="col-lg-8">
             James and David have been friends since grade 8 and James once set fire to David's arm in year 9 chemistry, proving that neither should be allowed near hazardous substances.  James introduced David to "Weird Al" Yankovic, Lemon &amp; Paeroa soft drink and LAN gaming.  After living together in university, their shared love of bargains lead to every Dick Smith and Officeworks store known to man. David recalls the first thing James said to him:
@@ -327,7 +327,8 @@
         <div class="row mb-5">
           <div class="col-lg-4 text-center">
             <h3 class="key-fact">Wade</h3>
-            <em>Groomsman</em>
+            <em>Groomsman,<br>
+            Ring Bearer</em>
           </div>
           <div class="col-lg-8">
             Wade's intellect is rivalled only by his ability to play the cello… and computer games. Wade and David met in grade 8, playing too many card games at lunch time (and in class).  In university, they shared an office, suffered Honours together &amp; played StarCraft when times got tough.  They've  worked on various IT projects throughout the years, peaking in the epic failure to play a DVD in New Zealand.
