Add link to Ozb hotels page

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ And, in fact, quite <em>stupendous</em>.</pre>
       <div class="col-lg-6 mx-auto">
         <div class="text-center mb-5">
           <h3 class="text" id="accommodation">Accomodation</h3>
-          <p class="lead">There are plenty of places to stay in town but sadly our place isn't one of them this time. Try these instead!</p>
+          <p class="lead">There are plenty of places to stay in town but sadly our place isn't one of them this time. Try these instead! Add a <a href="https://www.ozbargain.com.au/pages/hotels">deal or two</a> as well.</p>
         </div>
         <div class="row text-center align-items-center">
           <div class="col-6"><a class="logo" target="_blank" href="http://www.seagulls.com.au/"><img class="img-fluid logo" src="./img/seagulls-logo.png" title="Seagulls Resort"></a></div>
