--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="img/heart-sketch.png" type="image/png">
   <link rel="icon" href="img/heart-sketch.svg" sizes="any" type="image/svg+xml">
   <!-- Don't panic! -->
-  <title>It's Happening! ~ Kate Marries David</title>
+  <title>It's Happening! ❤️ Kate Marries David</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
