--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="row mb-5">
           <div class="col-lg-4 text-center">
             <h3 class="key-fact">Miradija</h3>
-            <em>Bridescompanion</em>
+            <em>Chief Bridesmaid</em>
           </div>
           <div class="col-lg-8">
             Better known as Marnie, she’s the non-identical twin Kate never had. Their friendship started at Pimlico High in year 10 after she relocated to Townsville, and continued through their senior years and university studies. They lived together in the final year of their respective degrees at the now-legendary “Nuthouse” (along with David and James). Though Marnie now lives in Tassie, the miles and oceans between them can’t seem to curb the silliness.
@@ -302,7 +302,7 @@
         <div class="row">
           <div class="col-lg-4 text-center">
             <h3 class="key-fact">Giovanni</h3>
-            <em>Bridescompanion</em>
+            <em>Bridesbitch</em>
           </div>
           <div class="col-lg-8">
             Giovanni and Kate have been friends since their early days of reading newspapers for fun in year 8 at Pimlico High. They’ve debated against the best and won, held countless election parties, enjoyed many different BBC productions, and shared extremely cold international holidays together. Despite Giovanni now living in Sydney, their long-distance quest for world domination continues.
@@ -362,7 +362,7 @@
         </div>
         <div class="row mb-5">
           <div class="col">
-            <p class="key-fact"><abbr title="To be announced">TBA</abbr></p>
+            <p class="key-fact"><abbr title="To be announced">Thursday</abbr></p>
             Bachelor + <br> Bachelorette party
           </div>
           <div class="col">
@@ -370,7 +370,7 @@
             <p>Ceremony Rehearsal + <br>Rehearsal Dinner<br>
             <span class="badge badge-navy">Wedding party only</span>
             </p>
-            <p class="px-lg-5 text-justify">Held at Kissing Point the afternoon before the wedding; rehearsal dinner to follow at a nearby location to be determined.</p>
+            <p class="px-lg-5 text-justify">Held at Kissing Point from 2.30pm; rehearsal dinner at Capitol Regent Aitkenvale at 7pm.</p>
           </div>
         </div>
         <div class="row">
