--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </p>
           </div>
         </div>
-        <div class="row collapse" id="saturday">
+        <div class="row">
           <div class="col px-lg-5 text-justify">
             <p>
               The ceremony is at Kissing Point, at northern-most end of Townsville’s Strand. Details on the Fort Lawn’s location within the <em>Jezzine Barracks</em> precinct, bathroom facilities, and car parking areas can be found in our <a class="page-scroll" href="#map">Maps section</a>.
@@ -411,13 +411,6 @@
             <div class="alert alert-info" role="alert">
               Please no fishing at the aquarium.  Thanks for your understanding.
             </div>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <div class="col">
-            <a class="more-info collapsed btn btn-primary" href="#saturday" data-toggle="collapse" aria-expanded="false" aria-controls="saturday">
-              more info
-            </a>
           </div>
         </div>
         <div class="row mb-5">
