--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               The ceremony is at Kissing Point, at northern-most end of Townsville’s Strand. Details on the Fort Lawn’s location within the <em>Jezzine Barracks</em> precinct, bathroom facilities, and car parking areas can be found in our <a class="page-scroll" href="#map">Maps section</a>.
             </p>
             <div class="alert alert-info" role="alert">
-              A short, uphill walk on a sealed path is required to reach this location, so anyone with accessibility issues may require additional assistance. Ceremony guests will be required to stand for the event, but we will have some chairs available for those who need them.  Let us know when RSVPing.
+              A short, uphill walk on a sealed path is required to reach this location, so anyone with accessibility issues may require additional assistance. We will have a lot of chairs available at the ceremony, but some guests may still be required to stand for the event - seating priority will be given to those with accessibility requirements.  Let us know if this is the case when RSVPing.
             </div>
           </div>
           <div class="col px-lg-5 text-justify">
