--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           Their shared loves include technology, Mexican food, the number 42, dark sarcasm, Savage Garden, Jack Bauer, badgers, rum and shrubberies. They jointly detest streetlights, litterbugs, modern music, Vogon poetry, <a href="https://stackoverflow.com/questions/1732348/regex-match-open-tags-except-xhtml-self-contained-tags/1732454#1732454">parsing HTML with regex</a>, undercooked chicken, poor Grammar, and unfinished
         </p>
         <p class="text-justify">
-          Kate and David’s journey culminated (peaked?) on 12 August 2017, when started an even bigger and more exciting chapter together, surrounded by loving family and friends.
+          Kate and David’s journey culminated (peaked?) on 12 August 2017, when they started an even bigger and more exciting chapter together, surrounded by loving family and friends.
         </p>
 
 
@@ -491,7 +491,7 @@
           </div>
           <div class="col">
             <p>
-              <span class="time">6.15 PM Sharp<br>Reception</span>
+              <span class="time">Six PM Sharp<br>Reception</span>
             </p>
             <p>
               <a href="http://www.reefhq.com.au/">
@@ -503,7 +503,7 @@
         <div class="row">
           <div class="col px-lg-5 text-justify">
             <p>
-              The ceremony is at Kissing Point, at northern-most end of Townsville’s Strand. Details on the Fort Lawn’s location within the <em>Jezzine Barracks</em> precinct, bathroom facilities, and car parking areas can be found in our <a class="page-scroll" href="#map">Maps section</a>.
+              The ceremony was at Kissing Point, at northern-most end of Townsville’s Strand. Details on the Fort Lawn’s location within the <em>Jezzine Barracks</em> precinct, bathroom facilities, and car parking areas can be found in our <a class="page-scroll" href="#map">Maps section</a>.
             </p>
             <div class="alert alert-info" role="alert">
               A short, uphill walk on a sealed path is required to reach this location, so anyone with accessibility issues may require additional assistance. We will have a lot of chairs available at the ceremony, but some guests may still be required to stand for the event - seating priority will be given to those with accessibility requirements.  Let us know if this is the case when RSVPing.
@@ -511,7 +511,7 @@
           </div>
           <div class="col px-lg-5 text-justify">
             <p>
-             The reception will be held at the ReefHQ Great Barrier Reef Aquarium, the largest living coral reef aquarium in the world.  ReefHQ is located at the southern-most end of Townsville’s Strand and venue location and parking arrangements can be viewed in our <a class="page-scroll" href="#map">Maps section</a>.
+             The reception was held at the ReefHQ Great Barrier Reef Aquarium, the largest living coral reef aquarium in the world.  ReefHQ is located at the southern-most end of Townsville’s Strand and venue location and parking arrangements can be viewed in our <a class="page-scroll" href="#map">Maps section</a>.
             </p>
             <div class="alert alert-info" role="alert">
               Please no fishing at the aquarium.  Thanks for your understanding.
